--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1> Linus Torvalds</h1>
     
     <p> The creator of Linux</p>
-    <img src="Linus_Torvalds.JPG" alt="picture of linus" style="width: 200px; max-width: 100%; margin-left:10px;">
+    <img src="LinusTorvalds.JPG" alt="picture of linus" style="width: 200px; max-width: 100%; margin-left:10px;">
     <p style="margin-left: 12px; margin-top: 0px;"> A photograph of Linus Torvalds</p>
     <h3>Biography</h3>
     
